	  rename the NEED_ALLOCA_H configuration setting to HAVE_ALLOCA_H
	- fix an overzealous double const
	- add a Makefile rule for the compilation of C files for
	  make(1) implementations that do not pass CPPFLAGS.
	- deprecate config.* except for config.posix and config.linux
	- clarify a README comment about the unpacked subdirectory

0.2.3	2015/12/10
	- build with large file support on Linux
	- clear the line after the cursor position on exit and suspend
	- fix some more typographical errors
	  (reported by Jakub Wilk <jwilk@debian.org>)

0.2.2	2015/12/10
	- reset the terminal color attributes on exit
	  (reported by Jakub Wilk <jwilk@debian.org>)
	- also reset the attributes on suspend (Ctrl-Z) and restore
	  them on resume

0.2.1	2015/12/10
	- fix some more typographical errors
	- abort on memory allocation failures (malloc(), realloc(),
	  strdup())

0.2.0	2015/12/09
	- fix a lot of C compiler warnings
	- provide a better vasprintf() simulation to fix a display bug
	- use sigemptyset() instead of a direct assignment to sigset_t
	  (reported by Daniel Schepler <dschepler@gmail.com>)
	- remove some unused functions
	- simplify exh_save_buffer(): it's only used on the whole file
	- declare some functions as printf-like
	- handle short reads/writes and read/write errors
	- bump the year on my copyright notice
	- fix a signed/unsigned char bug when reading the swapfile
	- merge early when marking screen lines for refreshing
	  (reported by Jonathan Neuschäfer <j.neuschaefer@gmx.net>)
	- let the editor use the HE_DEFAULT_PAGER value from defs.h as
	  a last-resort fallback (nothing in the environment, etc)
	  (reported by Jakub Wilk <jwilk@debian.org>)
	- allow the default pager value to be overridden at build time
	  (reported by Jakub Wilk <jwilk@debian.org>)

0.1.8	2014/09/11
	- fix a crash when inserting or replacing a half-byte
	  Thanks, Thibaut Girka <thib@sitedethib.com>
	- use CPPFLAGS and LDFLAGS as appropriate during the build